--- a/DQN.ipynb
+++ b/DQN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,39 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:unityagents:\n",
-      "'Academy' started successfully!\n",
-      "Unity Academy name: Academy\n",
-      "        Number of Brains: 1\n",
-      "        Number of External Brains : 1\n",
-      "        Lesson number : 0\n",
-      "        Reset Parameters :\n",
-      "\t\t\n",
-      "Unity brain name: BananaBrain\n",
-      "        Number of Visual Observations (per agent): 0\n",
-      "        Vector Observation space type: continuous\n",
-      "        Vector Observation space size (per agent): 37\n",
-      "        Number of stacked Vector Observation: 1\n",
-      "        Vector Action space type: discrete\n",
-      "        Vector Action space size (per agent): 4\n",
-      "        Vector Action descriptions: , , , \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "env = UnityEnvironment(file_name=\"Banana.app\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,26 +71,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of agents: 1\n",
-      "Number of actions: 4\n",
-      "States look like: [1.         0.         0.         0.         0.84408134 0.\n",
-      " 0.         1.         0.         0.0748472  0.         1.\n",
-      " 0.         0.         0.25755    1.         0.         0.\n",
-      " 0.         0.74177343 0.         1.         0.         0.\n",
-      " 0.25854847 0.         0.         1.         0.         0.09355672\n",
-      " 0.         1.         0.         0.         0.31969345 0.\n",
-      " 0.        ]\n",
-      "States have length: 37\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# reset the environment\n",
     "env_info = env.reset(train_mode=True)[brain_name]\n",
@@ -199,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,12 +191,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
-    "# import torch.nn.functional as F\n",
+    "from collections import deque, defaultdict\n",
     "import torch.optim as optim\n",
     "from dqnetwork import DQNetwork\n",
     "import random\n",
@@ -245,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,9 +228,8 @@
     "        self.output_features = [128, 64, 32, action_size]\n",
     "        \n",
     "        #Q-network : defines the 2 DQN (using doubling Q-learning architecture via fixed Q target)\n",
-    "        self.qnetwork_local = DQNetwork(input_features, output_features)\n",
-    "        self.qnetwork_target = DQNetwork(input_features, output_features)\n",
-    "        \n",
+    "        self.qnetwork_local = DQNetwork(self.input_features, self.output_features)\n",
+    "        self.qnetwork_target = DQNetwork(self.input_features, self.output_features)\n",
     "        #define the optimizer\n",
     "        self.optimizer = optim.Adam(self.qnetwork_local.parameters(), lr=lr)\n",
     "        \n",
@@ -354,12 +313,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#define the replay buffer class"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agent = Agent()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
