--- a/DDPG/src/code/Continuous_Control.ipynb
+++ b/DDPG/src/code/Continuous_Control.ipynb
@@ -2,13 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "from unityagents import UnityEnvironment\n",
     "import numpy as np\n",
-    "import time"
+    "import time\n",
+    "import matplotlib.pyplot as plt\n",
+    "from agent import Agent\n",
+    "\n",
+    "import torch"
    ]
   },
   {
@@ -127,9 +131,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total score (averaged over agents) this episode: 0.0\n"
+     ]
+    }
+   ],
    "source": [
     "states = env_info.vector_observations                  # get the current state (for each agent)\n",
     "scores = np.zeros(num_agents)                          # initialize the score (for each agent)\n",
@@ -148,11 +160,105 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DDPG Implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state_dim = int(env_info.vector_observations.shape[1])\n",
+    "action_dim = int(brain.vector_action_space_size)\n",
+    "\n",
+    "#Declare Agent class\n",
+    "agent = Agent(state_size=state_dim, action_size=action_dim)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def ddpg(episodes, step, pretrained=False, noise=True):\n",
+    "    \"\"\"Training using DDPG\"\"\"\n",
+    "    if pretrained:\n",
+    "        agent.actor_local.load_state_dict(torch.load('./models/weights/checkpoint_actor.pth', map_location=\"cpu\"))\n",
+    "        agent.critic_local.load_state_dict(torch.load('.models/weights/checkpoint_critic.pth', map_location=\"cpu\"))\n",
+    "        agent.actor_target.load_state_dict(torch.load('.models/weights/checkpoint_actor.pth', map_location=\"cpu\"))\n",
+    "        agent.critic_target.load_state_dict(torch.load('.models/weights/checkpoint_critic.pth', map_location=\"cpu\"))\n",
+    "\n",
+    "    reward_list = []\n",
+    "    time_list = []\n",
+    "\n",
+    "    for i in range(episodes):\n",
+    "        env_info = env.reset(train_mode=True)[brain_name] #reset the env.\n",
+    "        agent.reset()#reset OUNoise level\n",
+    "        state = env_info.vector_observations[0] # get the current state\n",
+    "        score = 0\n",
+    "        for t in range(step):\n",
+    "            action = agent.act(state, add_noise=noise)\n",
+    "            next_state, reward, done, info = env.step(action[0])[brain_name] # send the action to the environment\n",
+    "            agent.step(state, action, reward, next_state, done)\n",
+    "            state = next_state.squeeze()\n",
+    "            score += reward\n",
+    "\n",
+    "            if done:\n",
+    "                #print recent statistics every 10 episodes\n",
+    "                if(i%10 == 0):\n",
+    "                    print('Reward: {} | Episode: {}/{}'.format(np.array(reward_list)[-10:].mean(), i, episodes))\n",
+    "                    print(f\"Timesteps: {t}. Time (sec): {format(np.array(time_list)[-10:].mean()/50, '.3f')}\") #fps according to OpenAI = 50\n",
+    "                break\n",
+    "\n",
+    "        reward_list.append(score)\n",
+    "        time_list.append(t)\n",
+    "        #Save model every 100 episodes\n",
+    "        if(i%100 == 0):\n",
+    "            print(f\"\\nMEAN REWARD: {np.array(reward_list)[-100:].mean()}\\n\")\n",
+    "            torch.save(agent.actor_local.state_dict(), './models/checkpoint/checkpoint_actor_'+str(\"%03d\" % (i//100))+'.pth')\n",
+    "            torch.save(agent.critic_local.state_dict(), './models/checkpoint/checkpoint_critic_'+str(\"%03d\" % (i//100))+'.pth')\n",
+    "            torch.save(agent.actor_target.state_dict(), './models/checkpoint/checkpoint_actor_t_'+str(\"%03d\" % (i//100))+'.pth')\n",
+    "            torch.save(agent.critic_target.state_dict(), './models/checkpoint/checkpoint_critic_t_'+str(\"%03d\" % (i//100))+'.pth')\n",
+    "            \n",
+    "        if score >= 270:\n",
+    "            print('Task Solved')\n",
+    "            torch.save(agent.actor_local.state_dict(), './models/weights/checkpoint_actor.pth')\n",
+    "            torch.save(agent.critic_local.state_dict(), './models/weights/checkpoint_critic.pth')\n",
+    "            torch.save(agent.actor_target.state_dict(), './models/weights/checkpoint_actor_t.pth')\n",
+    "            torch.save(agent.critic_target.state_dict(), './models/weights/checkpoint_critic_t.pth')\n",
+    "            break\n",
+    "        \n",
+    "\n",
+    "    torch.save(agent.actor_local.state_dict(), './models/weights/checkpoint_actor.pth')\n",
+    "    torch.save(agent.critic_local.state_dict(), './models/weights/checkpoint_critic.pth')\n",
+    "    torch.save(agent.actor_target.state_dict(), './models/weights/checkpoint_actor_t.pth')\n",
+    "    torch.save(agent.critic_target.state_dict(), './models/weights/checkpoint_critic_t.pth')\n",
+    "\n",
+    "    print('Training saved')\n",
+    "    return reward_list, time_list\n",
+    "\n",
+    "\n",
+    "scores, time_list = ddpg(episodes=5000, step=2000)\n",
+    "\n",
+    "#Display Scores\n",
+    "fig = plt.figure()\n",
+    "plt.plot(np.arange(1, len(scores) + 1), scores)\n",
+    "plt.ylabel('Score')\n",
+    "plt.xlabel('Episode #')\n",
+    "plt.show()\n",
+    "\n",
+    "#Display time\n",
+    "fig = plt.figure()\n",
+    "plt.plot(np.arange(1, len(time_list) + 1), time_list)\n",
+    "plt.ylabel('Time')\n",
+    "plt.xlabel('Episode #')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
