--- a/DDPG/src/code/Continuous_Control.ipynb
+++ b/DDPG/src/code/Continuous_Control.ipynb
@@ -257,7 +257,8 @@
      "text": [
       "Episode 1\tScore: 0.04\tAverage Score: 0.04.30\n",
       "Episode 2\tScore: 0.11\tAverage Score: 0.07.89\n",
-      "Timestep 439\tScore: 0.14\tmin: 0.00\tmax: 0.69"
+      "Episode 3\tScore: 0.23\tAverage Score: 0.13.21\n",
+      "Timestep 79\tScore: 0.04\tmin: 0.00\tmax: 0.24"
      ]
     }
    ],
