--- a/DDPG/src/code/Continuous_Control.ipynb
+++ b/DDPG/src/code/Continuous_Control.ipynb
@@ -239,8 +239,8 @@
     "            print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_window)))\n",
     "        if np.mean(scores_window)>=30.0:\n",
     "            print('\\nEnvironment solved in {:d} episodes!\\tAverage Score: {:.2f}'.format(i_episode-100, np.mean(scores_window)))\n",
-    "            torch.save(Agent.actor_local.state_dict(), 'checkpoint_actor.pth')\n",
-    "            torch.save(Agent.critic_local.state_dict(), 'checkpoint_critic.pth')\n",
+    "            torch.save(Agent.actor_local.state_dict(), '../models/checkpoint_actor.pth')\n",
+    "            torch.save(Agent.critic_local.state_dict(), '../models/checkpoint_critic.pth')\n",
     "            break\n",
     "            \n",
     "    return scores_episode"
@@ -258,7 +258,8 @@
       "Episode 1\tScore: 0.04\tAverage Score: 0.04.30\n",
       "Episode 2\tScore: 0.11\tAverage Score: 0.07.89\n",
       "Episode 3\tScore: 0.23\tAverage Score: 0.13.21\n",
-      "Timestep 79\tScore: 0.04\tmin: 0.00\tmax: 0.24"
+      "Episode 4\tScore: 0.10\tAverage Score: 0.12.48\n",
+      "Timestep 119\tScore: 0.05\tmin: 0.00\tmax: 0.58"
      ]
     }
    ],
