removed cache files

--- a/DDPG/src/code/Continuous_Control.ipynb
+++ b/DDPG/src/code/Continuous_Control.ipynb
@@ -619,7 +619,8 @@
       "Episode 345\tScore: 23.33\tAverage Score: 24.2835\n",
       "Episode 346\tScore: 25.82\tAverage Score: 24.2783\n",
       "Episode 347\tScore: 24.78\tAverage Score: 24.2422\n",
-      "Timestep 919\tScore: 21.37\tmin: 14.82\tmax: 28.13"
+      "Episode 348\tScore: 23.15\tAverage Score: 24.2210\n",
+      "Timestep 99\tScore: 2.05\tmin: 0.77\tmax: 3.44"
      ]
     }
    ],
