--- a/MADDPG/src/Tennis.ipynb
+++ b/MADDPG/src/Tennis.ipynb
@@ -7,7 +7,12 @@
    "outputs": [],
    "source": [
     "from unityagents import UnityEnvironment\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import random\n",
+    "import torch\n",
+    "from collections import deque\n",
+    "from MADDPG import MADDPG\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -63,7 +68,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -109,36 +116,141 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for i in range(1, 6):                                      # play game for 5 episodes\n",
+    "#     env_info = env.reset(train_mode=False)[brain_name]     # reset the environment    \n",
+    "#     states = env_info.vector_observations                  # get the current state (for each agent)\n",
+    "#     scores = np.zeros(num_agents)                          # initialize the score (for each agent)\n",
+    "#     while True:\n",
+    "#         actions = np.random.randn(num_agents, action_size) # select an action (for each agent)\n",
+    "#         actions = np.clip(actions, -1, 1)                  # all actions between -1 and 1\n",
+    "#         env_info = env.step(actions)[brain_name]           # send all actions to tne environment\n",
+    "#         next_states = env_info.vector_observations         # get next state (for each agent)\n",
+    "#         rewards = env_info.rewards                         # get reward (for each agent)\n",
+    "#         dones = env_info.local_done                        # see if episode finished\n",
+    "#         scores += env_info.rewards                         # update the score (for each agent)\n",
+    "#         states = next_states                               # roll over states to next time step\n",
+    "#         if np.any(dones):                                  # exit loop if episode finished\n",
+    "#             break\n",
+    "#     print('Score (max over agents) from episode {}: {}'.format(i, np.max(scores)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create 2 agents (MA)\n",
+    "agents = MADDPG(state_size, action_size, random_seed = 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Define Constants\n",
+    "n_episodes = 15000\n",
+    "rand_episodes = 100 #number of episodes to encourage exploration\n",
+    "scores_list = []\n",
+    "scores_window = deque(maxlen=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score (max over agents) from episode 1: 0.0\n",
-      "Score (max over agents) from episode 2: 0.0\n",
-      "Score (max over agents) from episode 3: 0.09000000171363354\n",
-      "Score (max over agents) from episode 4: 0.0\n",
-      "Score (max over agents) from episode 5: 0.0\n"
+      "Episode 14\tAverage Score: 0.00tensor(-0.0035, grad_fn=<NegBackward>)\n",
+      "tensor(-0.0034, grad_fn=<NegBackward>)\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "one of the variables needed for gradient computation has been modified by an inplace operation: [torch.FloatTensor [128, 2]], which is output 0 of TBackward, is at version 2; expected version 1 instead. Hint: the backtrace further above shows the operation that failed to compute its gradient. The variable in question was changed in there or anywhere later. Good luck!",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-858833be21dd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m         \u001b[0;31m#Learn from experiences\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m         \u001b[0magents\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtime_step\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstates\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mactions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrewards\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnext_states\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdones\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m         \u001b[0mstates\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnext_states\u001b[0m                               \u001b[0;31m# roll over states to next time step\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Desktop/Nous/reinforcement_learning/personal_projects/RL-Unity/MADDPG/src/MADDPG.py\u001b[0m in \u001b[0;36mstep\u001b[0;34m(self, time_step, state, action, reward, next_state, done)\u001b[0m\n\u001b[1;32m     66\u001b[0m         \u001b[0;32mif\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtime_step\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mN_TIME_STEPS\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmemory\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mBATCH_SIZE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m             \u001b[0mexperience\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmemory\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 68\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlearn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexperience\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     69\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     70\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mlearn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexperiences\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Desktop/Nous/reinforcement_learning/personal_projects/RL-Unity/MADDPG/src/MADDPG.py\u001b[0m in \u001b[0;36mlearn\u001b[0;34m(self, experiences)\u001b[0m\n\u001b[1;32m     86\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0magent1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlearn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mother\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 88\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0magent2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlearn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mother\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Desktop/Nous/reinforcement_learning/personal_projects/RL-Unity/MADDPG/src/agent.py\u001b[0m in \u001b[0;36mlearn\u001b[0;34m(self, self_, other)\u001b[0m\n\u001b[1;32m    101\u001b[0m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_detect_anomaly\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mactor_loss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 103\u001b[0;31m         \u001b[0mactor_loss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mretain_graph\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#save buffer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    104\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mactor_optimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    105\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/envs/drlnd/lib/python3.6/site-packages/torch/tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[1;32m    196\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    197\u001b[0m         \"\"\"\n\u001b[0;32m--> 198\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    199\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    200\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/envs/drlnd/lib/python3.6/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[1;32m     98\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m     99\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 100\u001b[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m    101\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: one of the variables needed for gradient computation has been modified by an inplace operation: [torch.FloatTensor [128, 2]], which is output 0 of TBackward, is at version 2; expected version 1 instead. Hint: the backtrace further above shows the operation that failed to compute its gradient. The variable in question was changed in there or anywhere later. Good luck!"
      ]
     }
    ],
    "source": [
-    "for i in range(1, 6):                                      # play game for 5 episodes\n",
-    "    env_info = env.reset(train_mode=False)[brain_name]     # reset the environment    \n",
-    "    states = env_info.vector_observations                  # get the current state (for each agent)\n",
-    "    scores = np.zeros(num_agents)                          # initialize the score (for each agent)\n",
+    "for i_episode in range(1, n_episodes + 1):\n",
+    "    env_info = env.reset(train_mode=True)[brain_name]         \n",
+    "    states = env_info.vector_observations                  \n",
+    "    scores = np.zeros(num_agents)  \n",
+    "    \n",
+    "    time_step = 0\n",
     "    while True:\n",
-    "        actions = np.random.randn(num_agents, action_size) # select an action (for each agent)\n",
-    "        actions = np.clip(actions, -1, 1)                  # all actions between -1 and 1\n",
-    "        env_info = env.step(actions)[brain_name]           # send all actions to tne environment\n",
-    "        next_states = env_info.vector_observations         # get next state (for each agent)\n",
+    "        \n",
+    "        time_step += 1 #Update time step counter\n",
+    "\n",
+    "        # Random actions for first 1200 episodes to encourage exploration\n",
+    "        if i_episode < rand_episodes:\n",
+    "            actions = agents.act(states, rand = True)\n",
+    "        else: \n",
+    "            print(\"here\")\n",
+    "            actions = agents.act(states)\n",
+    "        \n",
+    "        env_info = env.step(actions)[brain_name]           # send all actions to the environment\n",
+    "        next_states = env_info.vector_observations         # get next state (for each agent)              \n",
     "        rewards = env_info.rewards                         # get reward (for each agent)\n",
     "        dones = env_info.local_done                        # see if episode finished\n",
     "        scores += env_info.rewards                         # update the score (for each agent)\n",
+    "        \n",
+    "        #Learn from experiences\n",
+    "        agents.step(time_step, states, actions, rewards, next_states, dones)\n",
+    "        \n",
     "        states = next_states                               # roll over states to next time step\n",
-    "        if np.any(dones):                                  # exit loop if episode finished\n",
+    "        if np.any(dones):                                 # exit loop if episode finished\n",
     "            break\n",
-    "    print('Score (max over agents) from episode {}: {}'.format(i, np.max(scores)))"
+    "    \n",
+    "    scores_list.append(np.max(scores))\n",
+    "    scores_window.append(np.max(scores))\n",
+    "    print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, np.max(scores)), end=\"\")\n",
+    "    \n",
+    "    if i_episode % 100 == 0:\n",
+    "        torch.save(agents.agent1.actor_local.state_dict(), 'checkpoint_agent1_actor.pth')\n",
+    "        torch.save(agents.agent1.critic_local.state_dict(), 'checkpoint_agent1_critic.pth')\n",
+    "        \n",
+    "        torch.save(agents.agent2.actor_local.state_dict(), 'checkpoint_agent2_actor.pth')\n",
+    "        torch.save(agents.agent2.critic_local.state_dict(), 'checkpoint_agent2_critic.pth')\n",
+    "        \n",
+    "        print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_window)))\n",
+    "\n",
+    "    if np.mean(scores_window) > 0.5:\n",
+    "        torch.save(agents.agent1.actor_local.state_dict(), 'checkpoint_agent1_actor.pth')\n",
+    "        torch.save(agents.agent1.critic_local.state_dict(), 'checkpoint_agent1_critic.pth')\n",
+    "        \n",
+    "        torch.save(agents.agent2.actor_local.state_dict(), 'checkpoint_agent2_actor.pth')\n",
+    "        torch.save(agents.agent2.critic_local.state_dict(), 'checkpoint_agent2_critic.pth')\n",
+    "        \n",
+    "        print('\\nEnvironment solved in {:d} episodes!\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_window)))\n",
+    "        break"
    ]
   },
   {
@@ -146,7 +258,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(111)\n",
+    "plt.plot(np.arange(len(scores_list)), scores_list)\n",
+    "plt.ylabel('Score')\n",
+    "plt.xlabel('Episode Number')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
