--- a/MADDPG/src/code/Tennis.ipynb
+++ b/MADDPG/src/code/Tennis.ipynb
@@ -44,7 +44,7 @@
     }
    ],
    "source": [
-    "env = UnityEnvironment(file_name=\"../unity/Tennis.app\")"
+    "env = UnityEnvironment(file_name=\"../../unity/Tennis.app\")"
    ]
   },
   {
@@ -177,7 +177,7 @@
     "    \n",
     "    for i in range(num_agents):\n",
     "        #Declare Agent class and append to memory\n",
-    "        agents.append(Agent(state_dim, action_dim, random_seed=0))\n",
+    "        agents.append(Agent(state_dim, action_dim, random_seed=2))\n",
     "    \n",
     "    for i_episode in range(1, n_episodes+1):\n",
     "        env_info = env.reset(train_mode=True)[brain_name]\n",
@@ -231,7 +231,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode 70\tScore: 0.00\tAverage Score: 0.01"
+      "Episode 38\tScore: 0.00\tAverage Score: 0.00"
      ]
     }
    ],
