model architecure set to 256->128 fully connected layers

--- a/MADDPG/src/code/Tennis.ipynb
+++ b/MADDPG/src/code/Tennis.ipynb
@@ -264,7 +264,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode 33\tScore: 0.00\tAverage Score: 0.00"
+      "Episode 100\tAverage Score: 0.00 Score: 0.00\n",
+      "Episode 200\tAverage Score: 0.00 Score: 0.00\n",
+      "Episode 300\tAverage Score: 0.00 Score: 0.00\n",
+      "Episode 400\tAverage Score: 0.00 Score: 0.00\n",
+      "Episode 500\tAverage Score: 0.00 Score: 0.00\n",
+      "Episode 600\tAverage Score: 0.00 Score: 0.00\n",
+      "Episode 659\tScore: 0.00\tAverage Score: 0.00"
      ]
     }
    ],
