migrate pre-training with new model & base

--- a/MADDPG/src/code/Tennis.ipynb
+++ b/MADDPG/src/code/Tennis.ipynb
@@ -166,14 +166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random seed value: 63\n"
+      "Random seed value: 76\n"
      ]
     }
    ],
@@ -184,73 +184,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ddpg(n_episodes=3_000, max_t=1000, pretrained=False):\n",
-    "    \"\"\" Deep Deterministic Policy Gradients\n",
-    "    Params\n",
-    "    ======\n",
-    "        n_episodes (int): maximum number of training episodes, default = 3,000\n",
-    "        max_t (int): maximum number of timesteps per episode, default = 1000\n",
-    "        pretrained (bool): load weights from checkpoint, default = False\n",
-    "    \"\"\"\n",
-    "    scores_window = deque(maxlen=100)\n",
-    "    scores = np.zeros(num_agents)\n",
-    "    scores_episode = []\n",
-    "    \n",
-    "    agents =[] \n",
-    "    \n",
-    "    for i in range(num_agents):\n",
-    "        #Declare Agent class and append to memory\n",
-    "        agents.append(Agent(state_dim, action_dim, random_seed=random_seed))\n",
-    "    \n",
-    "    if(pretrained):\n",
-    "        torch.load('../models/checkpoint/actor.pth', map_location='cpu')\n",
-    "        torch.load('../models/checkpoint/critic.pth', map_location='cpu')\n",
-    "    \n",
+    "#Utils\n",
+    "def unity_step_wrap(actions):\n",
+    "    env_info = env.step(actions)[brain_name]        # send the action to the environment\n",
+    "    next_states = env_info.vector_observations      # get the next state\n",
+    "    rewards = env_info.rewards                      # get the reward\n",
+    "    dones = env_info.local_done                     # see if episode has finished\n",
+    "    return (next_states, rewards, dones)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agent = Agent(state_size=state_size, action_size=action_size, random_seed=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ddpg(n_episodes=1000, max_t=1000, print_every=100):\n",
+    "    scores_deque = deque(maxlen=print_every)\n",
+    "    scores = []\n",
     "    for i_episode in range(1, n_episodes+1):\n",
     "        env_info = env.reset(train_mode=True)[brain_name]\n",
-    "        states = env_info.vector_observations\n",
+    "        states = env_info.vector_observations                     \n",
     "        \n",
-    "        for agent in agents:\n",
-    "            agent.reset()\n",
-    "            \n",
-    "        scores = np.zeros(num_agents)\n",
-    "            \n",
+    "        agent.reset()\n",
+    "        scores_episode = np.zeros(num_agents)\n",
+    "        \n",
     "        for t in range(max_t):\n",
-    "            actions = np.array([agents[i].act(states[i]) for i in range(num_agents)]).squeeze(1)\n",
-    "            env_info = env.step(actions)[brain_name]        # send the action to the environment\n",
-    "            next_states = env_info.vector_observations     # get the next state\n",
-    "            rewards = env_info.rewards                     # get the reward\n",
-    "            dones = env_info.local_done        \n",
+    "            actions = agent.act(states)\n",
+    "            next_states, rewards, dones = unity_step_wrap(actions)\n",
     "            \n",
-    "            for i in range(num_agents):\n",
-    "                agents[i].step(t, states[i], actions[i], rewards[i], next_states[i], dones[i]) \n",
-    " \n",
-    "            states = next_states\n",
-    "            scores += rewards\n",
+    "            for state, action, reward, next_state, done in zip(states, actions, rewards, next_states, dones):\n",
+    "                agent.step(t, state, action, reward, next_state, done)\n",
+    "                \n",
+    "            scores_episode += rewards\n",
+    "            states = next_states                                \n",
+    "                       \n",
     "            if np.any(dones):\n",
     "                break \n",
-    "        score = np.max(scores)\n",
-    "        scores_window.append(score)       # save most recent score\n",
-    "        scores_episode.append(score)\n",
     "        \n",
-    "        print('\\rEpisode {}\\tScore: {:.2f}\\tAverage Score: {:.2f}'.format(i_episode, score, np.mean(scores_window)), end=\"\")\n",
-    "        if i_episode % 100 == 0:\n",
-    "            print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_window)))\n",
-    "            #save checkpoint\n",
+    "        score = np.max(scores_episode)\n",
+    "        scores_deque.append(score)\n",
+    "        scores.append(score)\n",
+    "        \n",
+    "        print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_deque)), end=\"\")\n",
+    "    \n",
+    "        # Save checkpoint\n",
+    "        if i_episode % print_every == 0:\n",
+    "            print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_deque)))\n",
     "            torch.save(Agent.actor_local.state_dict(), '../models/checkpoint/actor.pth')\n",
     "            torch.save(Agent.critic_local.state_dict(), '../models/checkpoint/critic.pth')\n",
     "            \n",
-    "        if np.mean(scores_window)>=0.5:\n",
-    "            print('\\nEnvironment solved in {:d} episodes!\\tAverage Score: {:.2f}'.format(i_episode-100, np.mean(scores_window)))\n",
-    "            torch.save(Agent.actor_local.state_dict(), '../models/checkpoint_actor.pth')\n",
-    "            torch.save(Agent.critic_local.state_dict(), '../models/checkpoint_critic.pth')\n",
+    "        if np.mean(scores_deque) >= 0.5:\n",
     "            break\n",
-    "            \n",
-    "    return scores_episode"
+    "        \n",
+    "    return scores"
    ]
   },
   {
@@ -264,7 +264,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode 86\tScore: 0.00\tAverage Score: 0.00"
+      "Episode 61\tAverage Score: 0.00"
      ]
     }
    ],
