external replay memory and shared step()

--- a/MADDPG/src/code/Tennis.ipynb
+++ b/MADDPG/src/code/Tennis.ipynb
@@ -52,7 +52,7 @@
     }
    ],
    "source": [
-    "env = UnityEnvironment(file_name=\"../../unity/Tennis.app\")"
+    "env = UnityEnvironment(file_name=\"../../unity/Tennis_Windows_x86_64/Tennis.exe\")"
    ]
   },
   {
@@ -173,18 +173,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random seed value: 92\n"
+      "Random seed value: 2\n"
      ]
     }
    ],
    "source": [
-    "random_seed = round(np.random.rand()*100) #select a random seed value\n",
+    "random_seed = 2#round(np.random.rand()*100) #select a random seed value\n",
     "print(f\"Random seed value: {random_seed}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#set some params\n",
+    "N_LEARN_UPDATES = 10     # number of learning updates\n",
+    "N_TIME_STEPS = 10       # every n time step do update"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,11 +206,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ddpg(n_episodes=3_000, max_t=3_000, print_every=100):\n",
+    "def ddpg(n_episodes=1_500, max_t=3_000, print_every=100):\n",
     "    scores_deque = deque(maxlen=print_every)\n",
     "    scores = []\n",
     "    for i_episode in range(1, n_episodes+1):\n",
@@ -230,10 +241,16 @@
     "            # see if episodes finished\n",
     "            dones = env_info.local_done\n",
     "\n",
-    "            #Proceed training for both agents\n",
+    "            #append to memory buffer for both agents\n",
     "            for state, action, reward, next_state, done in zip(states, [action1, action2], rewards, next_states, dones):\n",
-    "                agent1.step(t, state, action, reward, next_state, done)\n",
-    "                agent2.step(t, state, action, reward, next_state, done) \n",
+    "                agent1.memory.add(state, action, reward, next_state, done) #append to memory buffer\n",
+    "                agent2.memory.add(state, action, reward, next_state, done) #append to memory buffer\n",
+    "            \n",
+    "            #Proceed training for both agents\n",
+    "            if(t%N_TIME_STEPS == 0):\n",
+    "                for _ in range(N_LEARN_UPDATES):\n",
+    "                    agent1.step(t, state, action, reward, next_state, done)\n",
+    "                    agent2.step(t, state, action, reward, next_state, done) \n",
     "                            \n",
     "            #Append stats\n",
     "            scores_episode += rewards\n",
@@ -281,7 +298,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode 42\tAverage Score: 0.0000\tCurrent Score: 0.0000"
+      "Episode 79\tAverage Score: 0.0013\tCurrent Score: 0.0000"
      ]
     }
    ],
